Created tests for the driver protocols and fixed several issues with the protocols